--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
 @import "tailwindcss";
 
-body{
+body {
   overflow-x: hidden;
+}
+
+.image-container {
+  animation: shadowAnimation 3s infinite alternate ease-in-out;
+}
+
+@keyframes shadowAnimation {
+  0% {
+    filter: drop-shadow(0px 200px 150px rgba(255, 0, 150, 0.6));
+  }
+  50% {
+    filter: drop-shadow(0px 200px 150px rgba(0, 150, 255, 0.6));
+  }
+  100% {
+    filter: drop-shadow(0px 200px 150px rgba(255, 0, 150, 0.6));
+  }
 }
