--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,131 @@ body {
     filter: drop-shadow(0px 200px 150px rgba(255, 0, 150, 0.6));
   }
 }
+
+.image {
+  transform: scale(0.7);
+}
+
+.filter-image {
+  filter: drop-shadow(2px 2px 3px white);
+  transform: scale(1.2);
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  display: none;
+}
+
+.swiper-button-next::before,
+.swiper-button-prev::before {
+  width: 100px;
+  height: 20px;
+  position: absolute;
+  top: 150px;
+}
+
+.swiper-button-next::before {
+  content: url("/public/home/hero-arrow-right.svg");
+  right: 300px;
+}
+
+.swiper-button-next:hover::before,
+.swiper-button-prev:hover::before {
+  transform: scale(1.1);
+  filter: drop-shadow(2px 2px 3px white);
+}
+
+.swiper-button-prev::before {
+  content: url("/public/home/hero-arrow-left.svg");
+  left: 300px;
+}
+
+@media (max-width: 1650px) {
+  .swiper-button-next::before,
+  .swiper-button-prev::before {
+    top: 200px;
+  }
+
+  .swiper-button-next::before {
+    right: 450px;
+  }
+
+  .swiper-button-prev::before {
+    left: 450px;
+  }
+}
+
+@media (max-width: 1450px) {
+  .swiper-button-next::before,
+  .swiper-button-prev::before {
+    top: 150px;
+  }
+
+  .swiper-button-next::before {
+    right: 450px;
+  }
+
+  .swiper-button-prev::before {
+    left: 450px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .swiper-button-next::before,
+  .swiper-button-prev::before {
+    top: 150px;
+  }
+
+  .swiper-button-next::before {
+    right: 350px;
+  }
+
+  .swiper-button-prev::before {
+    left: 350px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .swiper-button-next::before,
+  .swiper-button-prev::before {
+    top: 200px;
+  }
+
+  .swiper-button-next::before {
+    right: 200px;
+  }
+
+  .swiper-button-prev::before {
+    left: 200px;
+  }
+}
+
+@media (max-width: 900px) {
+  .swiper-button-next::before,
+  .swiper-button-prev::before {
+    top: 190px;
+  }
+
+  .swiper-button-next::before {
+    right: 130px;
+  }
+
+  .swiper-button-prev::before {
+    left: 130px;
+  }
+}
+
+@media (max-width: 600px) {
+  .swiper-button-next::before,
+  .swiper-button-prev::before {
+    top: 130px;
+  }
+
+  .swiper-button-next::before {
+    right: 30px;
+  }
+
+  .swiper-button-prev::before {
+    left: 30px;
+  }
+}
